alteração no volume docker do mongo, script de run adicionado e ajustes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: taskouMONGODB1
     volumes:
-      - /c/mongodb/data/db:/data/db
+      - ./api/mongodb/data/db:/data/db
     restart: always
